add intro before line plot

--- a/introduction.tex
+++ b/introduction.tex
@@ -1,12 +1,27 @@
 \section[Anthropogenic mass]{Anthropogenic mass}
 \label{sec:anthropogenic_mass}
 
+The global population nearly quadrupled in the 20th century, from 1.6 billion in 1900 to 6.1 billion in 2000, reflecting an unprecedented growth in both the population and the speed of urbanization.\autocite{krausmann2009growth} However, by 2050, it is estimated that the population will increase to 9.7 billion 10 (\autoref{fig:ghg}). This growth has come closer to an exponential tendency as advances from the industrial revolution have made production increases possible, breaking the boundaries that constrained traditional settlements.
+
 \begin{figure}[ht!]
   \centering
   \includegraphics[scale=0.19]{plots/introduction/mapsIntro.png}
   \caption[Worldwide urbanization evolution map between 1900 and 2050]{\textbf{Worldwide urbanization evolution map between 1900 and 2050}. Majority rural indicates less than 50\% of the population lives in urban areas, whereas majority urban indicates more than 50\%. Data obtained from.\autocite{ourworldindata_2020}}
   \label{fig:ghg}
 \end{figure}
+
+Construction has been a key productive sector in this process since it has shaped the environment where human beings carry out their daily lives, having repercussions on the global economic activity and the environmental impact due to the large amounts of energy and materials it requires,\autocite{cuchi2014building} and the corresponding outflows of waste and emissions.\autocite{krausmann2009growth} Neither the growth of technical capabilities and a deeper understanding of the surrounding world nor the effort to secure a better quality of life would have been successful without innovations in energy use.\autocite{smil2000energy} 
+
+The human-made mass, also known as anthropogenic mass, represented barely 3\% of the world's biomass at the turn of the 20th century. However, 120 years later, the anthropogenic mass has surpassed the total living biomass on the planet (1154 Gt vs. 1120 Gt, respectively), accounting for 524,643 kgCO$_2$/MetricTon of embodied carbon\footnote{Result obtained from\autocite{calkins2008materials} (2008).}. If current trends continue, it is expected to exceed 3 Tt by 2040 (\autoref{fig:antropogenic}), almost triple the dry biomass on Earth. Despite making up ~0.01\% of the planet's living biomass, each human on the planet produces an average amount of anthropogenic mass each week that is greater than one’s body weight.\autocite{elhacham2020global}
+
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=0.4]{plots/introduction/antropogenic_mass.pdf}
+  \caption[ Anthropogenic mass estimates since the beginning of the 20th century.]{\textbf{ Anthropogenic mass estimates since the beginning of the 20th century}. X-axis indicates the year. Y-axis shows the mass represented in gigatons (Gt). Green and red represent living biomass and anthropogenic mass, respectively. The year 2020 marks the time at which  anthropogenic mass has exceeded living biomass. Living biomass is comprised of plants, animals, bacteria, fungi, protists, archaea, and viruses. Data obtained from.\autocite{elhacham2020global}}
+  \label{fig:antropogenic}
+\end{figure}
+
+As seen in \autoref{tab:hmm_table}, concrete is the most consumed material worldwide. In consequence, the cement sector is responsible for about 5\% of all man-made emissions of CO$_2$, the primary GHG that drives global climate change.\autocite{calkins2008materials} While the acquisition of raw materials is frequently disregarded, the processing and final application of construction materials require billions of tons of fossil fuels, metals, minerals, and natural products. Nearly 90 billion tons of raw materials are extracted annually from the Earth.\autocite{krausmann2009growth} Therefore, our energy challenge comes from a material problem. We use a wide range of materials, many of which are becoming more and more diverse, and the construction sector, whether direct or indirect, makes use of a significant proportion of these materials.
 
 \begin{table}[!htb]
   \caption[Human Made Mass by years]{\textbf{Human Made Mass by years}. All human made mass are represented in mass by gigatons (m/Gt) from 1900 to 2020, divided into material groups. Human MM denotes human made mass. Data obtained from.\autocite{krausmann2017global}}
@@ -24,7 +39,12 @@
   \label{tab:hmm_table}
 \end{table}
 
+\clearpage
+
 \section[Energy sources]{Energy sources}
 \label{sec:energy_sources}
 
+Energy is transformed during every natural activity as well as every human action. The search for increased energy use has been transformed into a greater mobilization of materials, which is how civilization has advanced. Energy is a necessary component of all terrestrial activities, both organic and inorganic. Therefore, it stands to reason that the evolution of human civilization must also be traced along with the rise of man's capacity for energy control and manipulation. The transition from a predominantly rural to an industrialized global economy required new sources to supply more effective energy inputs.\autocite{smil2000energy} 
+
+The way energy is produced has radically altered during the past century. Traditional biomass and coal were the only fuels accessible at the start of the 20th century. Additional sources, including oil, gas, nuclear energy, and renewable energy, were gradually introduced\autocite{owidenergy} (fig. x). Innovations like the steam engine, oil lamps, internal combustion engines, and the wide use of electricity caused these changes.\autocite{smil2017bp} The current energy transition is powered by the realization that mitigating climate change requires a reduction in greenhouse gas emissions and  avoiding the scarcity of raw materials due to over-exploitation.
 
