intro format and 5 mod

--- a/introduction.tex
+++ b/introduction.tex
@@ -39,12 +39,20 @@ As seen in \autoref{tab:hmm_table}, concrete is the most consumed material world
   \label{tab:hmm_table}
 \end{table}
 
-\clearpage
+% \clearpage
 
 \section[Energy sources]{Energy sources}
 \label{sec:energy_sources}
 
 Energy is transformed during every natural activity as well as every human action. The search for increased energy use has been transformed into a greater mobilization of materials, which is how civilization has advanced. Energy is a necessary component of all terrestrial activities, both organic and inorganic. Therefore, it stands to reason that the evolution of human civilization must also be traced along with the rise of man's capacity for energy control and manipulation. The transition from a predominantly rural to an industrialized global economy required new sources to supply more effective energy inputs.\autocite{smil2000energy} 
 
-The way energy is produced has radically altered during the past century. Traditional biomass and coal were the only fuels accessible at the start of the 20th century. Additional sources, including oil, gas, nuclear energy, and renewable energy, were gradually introduced\autocite{owidenergy} (fig. x). Innovations like the steam engine, oil lamps, internal combustion engines, and the wide use of electricity caused these changes.\autocite{smil2017bp} The current energy transition is powered by the realization that mitigating climate change requires a reduction in greenhouse gas emissions and  avoiding the scarcity of raw materials due to over-exploitation.
+The way energy is produced has radically altered during the past century. Traditional biomass and coal were the only fuels accessible at the start of the 20th century. Additional sources, including oil, gas, nuclear energy, and renewable energy, were gradually introduced\autocite{owidenergy} (\autoref{fig:lineplot}). Innovations like the steam engine, oil lamps, internal combustion engines, and the wide use of electricity caused these changes.\autocite{smil2017bp} The current energy transition is powered by the realization that mitigating climate change requires a reduction in greenhouse gas emissions and  avoiding the scarcity of raw materials due to over-exploitation.
+
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=0.38]{plots/introduction/lineplot.png}
+  \caption[ Global primary energy consumption between 1900 and 2020]{\textbf{ Global primary energy consumption between 1900 and 2020}. X-axis shows the year. Y-axis indicates the energy source consumption represented in Terawatt-hours (TWh). Inspired by.\autocite{owidenergy}}
+  \label{fig:lineplot}
+\end{figure}
+
 
