--- a/results_2.tex
+++ b/results_2.tex
@@ -83,7 +83,7 @@ In this work, we are going to thoroughly describe 3 pathways to reduce carbon em
 \subsubsection{Cement and concrete}
 \label{sec:cement_and_concrete}
 
-As a key concrete component, cement is a major contributor to climate change. There is currently no concrete substitute that can meet its functional capacity. Concrete is the most widely used construction material in the world, with more than 4 billion tonnes of cement produced each year, leading to more than 7-8\% of annual anthropogenic GHG emissions, which result from both energy use and chemical reactions.\autocite{cement2021concrete} Nowadays, the global demand is largely driven by China and other Asian countries\autocite{iea_2020} (\autoref{fig:cement}).
+As a key concrete component, cement is a major contributor to climate change. There is currently no concrete substitute that can meet its functional capacity.\autocite{environment2018eco} Concrete is the most widely used construction material in the world, with more than 4 billion tonnes of cement produced each year, leading to more than 7-8\% of annual anthropogenic GHG emissions,\autocite{cement2021concrete} which result from both energy use and chemical reactions. Nowadays, the global demand is largely driven by China and other Asian countries\autocite{iea_2020} (\autoref{fig:cement}).
 
 \begin{figure}[ht!]
   \centering
@@ -105,7 +105,7 @@ According to Lehne \textit{et al.},\autocite{lehne2018making} the 3 main pathway
 
 \begin{enumerate}
 \item \textbf{Savings in clinker production}. Clinker substitution is not only a very effective solution but also one that can be deployed cheaply today, as it does not generally require investments in new equipment or changes in fuel sources.\autocite{lehne2018making} Reducing the amount of Portland clinker used by substituting it with clinker substitutes such as fly ash, granulated blast furnace slag (GBFS), limestone, and other experimental materials that can reduce emissions of the whole process by up to 70\%. When combined with electrification using renewable energy sources, they have the potential to reduce emissions by 20\%. The IEA estimates that around 3.7 GJ and 0.83 tonnes of CO$_2$ can be saved per tonne of clinker displaced.\autocite{iea2017energy} The main constraints on clinker substitution tend to be the availability and cost of clinker substitute materials, which vary considerably by region; consumer acceptance; and the barriers imposed by standards and regulations.\autocite{imbabi2012trends}
-\item \textbf{Efficiency in design and construction}. By adopting a new design philosophy, using higher-quality concrete, replacing concrete with alternative materials, increasing the proportion of recycled and reused concrete, and improving the efficiency with which it is used on construction sites, it is possible to reduce the demand for concrete, sometimes by more than 50\%.\autocite{lehne2018making} A 5\% reduction in total emissions caused by the use of concrete is suggested by reducing the amount of cement used in concrete and using renewable energy for transportation.\autocite{aus_2022} 
+\item \textbf{Efficiency in design and construction}. By adopting a new design philosophy, using higher-quality concrete, replacing concrete with alternative materials, increasing the proportion of recycled and reused concrete, and improving the efficiency with which it is used on construction sites, it is possible to reduce the demand for concrete, sometimes by more than 50\%.\autocite{lehne2018making} A 5\% reduction in total emissions caused by the use of concrete is suggested by reducing the amount of cement used in concrete and using renewable energy for transportation.\autocite{aus_2022} Building components are prefabricated offsite and then installed, rather than manufactured \textit{in situ}, in 2016 accounted for 7\% of the industry’s value.\autocite{pickard2020phasing} Prefabricated projects can yield benefits, both in terms of cost and speed, reducing wastage by eliminating off-cuts and precise designs avoiding overspecification.\autocite{science2018off} Offsite and modular construction can also be combined with design for deconstruction, increasing the reuse of materials.\autocite{BRE_2015}
 \item \textbf{CCS implementation}. By implementing CO$_2$ capture and storage (CCS) or CO$_2$ capture and utilization (CCU) techniques in the clinker manufacturing processes, it is possible to reduce the emissions from the concrete's life cycle that cannot be eliminated by changes in the production and use processes. The development of some novel concretes, which depend on a source of pure captured CO$_2$ for carbonation curing\footnote{The unhydrated cement minerals react with the pure CO$_2$ in the high-pressure atmosphere used to cure the concrete, solidifying it as carbonate.}, could benefit from CCS. Many experts are sceptical about the potential to rapidly scale up CCS since this technique is not commercially operational yet and it only appears in some of the IPCC reduction scenarios. The cost of the technology in comparison to other levers is one of the major issues facing CCS.
 \end{enumerate}
 
