add list of fig, and tables, add heatmap

--- a/results_2.tex
+++ b/results_2.tex
@@ -3,23 +3,30 @@
 
 The adoption of the Paris Agreement by 190 countries in 2015 marked a significant advancement in the international response to the threat of climate change. The three major CO$_2$ emitters: China, India, and the United States, were not among the over 60 nations that had pledged to achieve carbon neutrality by 2050, according to a 2019 UN announcement, which included the United Kingdom and the European Union (with the exception of Poland).\autocite{summit2019report} Moreover, some nations have pledged to work toward earlier dates, as opposed to China, which pledged for achieving the 100\% Net Zero emission target before 2060.\autocite{moghaddasi2021net} Together, these agreements have led to growing pressure to pursue decarbonization across all industrial sectors.\autocite{hoffmann2021decarbonization} Nonetheless, to achieve these goals, the current NZ regulations need to be clarified.\autocite{moghaddasi2021net}
 
-Applying the Paris Agreement and transitioning to Net Zero Carbon–and consequently–being an energy-efficient society by 2050 impacts the construction lifecycle emissions mainly in two stages: \textbf{1)} processing raw materials, and \textbf{2)} operation of buildings. As stated in McKinsey's analysis\autocite{mckinsey_2020} (fig. x), opportunities to reduce the footprint of a building for the various stakeholders involved in decision-making at the various stages of a project, from financing, design, material selection, and processing, to construction and operation, are addressed. 
-
 \begin{table}[!htb]
-  \caption[List of internal and external stakeholders during the construction lifecycle]{\textbf{List of internal and external stakeholders during the construction lifecycle}. Uppercase letter shows the stakeholder abbreviation implemented in Fig. X.}
+  \caption[List of internal and external stakeholders during the construction lifecycle]{\textbf{List of internal and external stakeholders during the construction lifecycle}. Uppercase letters between parenthesis show the stakeholder abbreviation implemented in \autoref{fig:heatmap}.}
   \begin{scriptsize}
     \begin{tabulary}{0.65\linewidth}{ccccc}
       \textbf{Internal stakeholders} & \textbf{External stakeholders}  \\ \hline
       Financiers (F) &  Power sector (P) \\
       Developers (D) &  Government (G)   \\
-      Designers (De) &  Financial institutions (F) \\
-      Material suppliers (M) &  Other private sectors (O) \\
+      Designers (De) &  Financial institutions (Fi) \\
+      Material suppliers (M) &  Other private sectors (Ot) \\
       Contractors (C) & \\
       Occupiers (O) & \\
     \end{tabulary}
   \end{scriptsize}
   \label{tab:stakeholders}
 \end{table}
+
+Applying the Paris Agreement and transitioning to Net Zero Carbon–and consequently–being an energy-efficient society by 2050 impacts the construction lifecycle emissions mainly in two stages: \textbf{1)} processing raw materials, and \textbf{2)} operation of buildings. As stated in McKinsey's analysis\autocite{mckinsey_2020} (\autoref{fig:heatmap}), opportunities to reduce the footprint of a building for the various stakeholders involved in decision-making at the various stages of a project, from financing, design, material selection, and processing, to construction and operation, are addressed. 
+
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=0.5]{plots/results/decarbonization/heatmap.png}
+  \caption[GHG emissions impact of the construction lifecycle according to internal and external stakeholders]{\textbf{GHG emissions impact of the construction lifecycle according to internal and external stakeholders}. Heatmap based on the implication of internal \textbf{(A)} and external \textbf{(B)} stakeholders, columns (sequentially sorted) describe the construction lifecycle, and each row is a stakeholder (see \autoref{tab:stakeholders}). Color of each cell denotes the impact of each stakeholder, ranging from high (brown) to low (yellow) impact.}
+  \label{fig:heatmap}
+\end{figure}
 
 Roadmaps are planning instruments, linking shorter-term targets to longer-term goals; helping align the actors and organizations of the industry to instigate technological and institutional breakthroughs to halve anthropogenic emissions each decade.\autocite{rockstrom2017roadmap} To better understand the mechanisms, challenges, and opportunities that materials face as they work toward decarbonization, we will divide the materials into two categories in this study: \textbf{1)} structural materials and \textbf{2)} operational materials. Structural materials are employed for erecting the building (\textit{e.g.} foundations, walls, and load-bearing supports) and operational materials are used for the building’s services (\textit{e.g.} thermal and acoustic insulation, lightning and air conditioning systems).
 
@@ -66,10 +73,10 @@ Utilizing current technology, modern steel mills run close to their practical th
 
 Additionally, there are other pathways that reduce carbon emissions, but these pathways are still in early stages:
 
-\begin{enumerate}
+\begin{itemize}
 \item Substitution from carbon to hydrogen obtained from renewable sources, combined with the use of new and more efficient reducing furnaces.
 \item Directly use of electrical energy in electrolytic furnaces.
-\end{enumerate}
+\end{itemize}
 
 In this work, we are going to thoroughly describe 3 pathways to reduce carbon emissions, since these strategies are the ones that promise the greatest reduction in CO$_2$ emissions.\autocite{elkerbout2021impact}
 
