title and objectives

--- a/cover.tex
+++ b/cover.tex
@@ -12,7 +12,7 @@ Master's degree in \textbf{Sustainable Intervention in the Built Environment} (M
 
 \vspace*{2ex}
 
-{\huge\mdseries Title\par}
+{\huge\mdseries Challenges towards the construction sector's decarbonization\par}
 \vspace*{2ex}
 
 Manuscript presented by
