--- a/main.tex
+++ b/main.tex
@@ -48,8 +48,14 @@
 \chapter{Objectives}
 \clearpage
 
-% \input{objectives}
+\input{objectives}
 \clearpage
+
+\chapter{Materials and Methods}
+\clearpage
+\input{methods}
+\clearpage
+
 
 \chapter{Urbanization growth}
 \clearpage
