--- a/abstract.tex
+++ b/abstract.tex
@@ -1,4 +1,4 @@
-The increasing social and industrial metabolism, \textit{i.e.} the inputs of materials and energy into socio-economic systems and the corresponding outflows of waste and emissions, has been one of the main causes of human-induced environmental change. In 2020, the anthropogenic mass exceeded the biomass (1154 Gt vs. 1120 Gt, respectively). The development of new construction materials and, consequently, architectural styles has been influenced by global events such as World War I, World War II, the Yom Kippur War, and the Paris Agreement. Following the Paris Agreement, the major producers of building materials—focusing on concrete, steel, and plastic—developed pathways to decarbonize their respective industries, which in turn will help to decarbonize the construction sector.
+The increasing social and industrial metabolism, \textit{i.e.} the inputs of materials and energy into socio-economic systems and the corresponding outflows of waste and emissions, has been one of the main causes of human-induced environmental change. In 2020, the anthropogenic mass exceeded the biomass (1154 Gt vs. 1120 Gt, respectively). The development of new construction materials and, consequently, architectural styles has been influenced by global events such as World War I, World War II, the Yom Kippur War, and the Paris Agreement. Following the Paris Agreement, the major producers of building materials—focusing on concrete, steel, and plastic—developed pathways to decarbonize their respective industries,which consequently will lead in turn will help to decarbonize the construction sector.
 
 \vfill
 
