--- a/results_2.tex
+++ b/results_2.tex
@@ -44,7 +44,7 @@ There are several manuscripts about material-usage, \textit{e.g.} Hertwich resea
 
 The steel, concrete, and plastic decarbonization roadmaps here analyzed are presented by independent bodies, as well as self-assessments from the construction sector itself. A McKinsey study on "the decarbonization challenge for steel",\autocite{hoffmann2021decarbonization} and the Joule journal review on "Low-carbon production of iron and steel"\autocite{fan2021low}, as well as the European project "Green Steel for Europe"\autocite{elkerbout2021impact} presents the different paths that the steel sector has to reach decarbonization in 2050. In the case of cement and concrete, there are several roadmaps and studies on its decarbonization. We take as a reference the Chatham House study,\autocite{lehne2018making} complementing it with the global route presented by the Global Cement and Concrete Association.\autocite{cement2021concrete} Finally, for plastic, we have selected The Alliance for Sustainable Building Products, peer-reviewed by the ASBP Plastics in Construction Group;\autocite{asbp_2020} and the ODI report "Phasing out plastics".\autocite{pickard2020phasing}
 
-\subsection{Materials used for structural purposes}
+\subsection{Structural materials}
 \label{sec:materials_used_for_structural_purposes}
 
 \subsubsection{Steel and iron}
@@ -118,7 +118,7 @@ According to Lehne \textit{et al.},\autocite{lehne2018making} the 3 main pathway
 
 All the improvements described above, seem they would increase the Portland cement price, leading to a competitive decrease in comparison with other materials with cheaper decarbonization (\textit{e.g.} brick, wood, etc.).
 
-\subsection{Materials used for services}
+\subsection{Operational materials}
 \label{sec:materials_used_for_services}
 
 \subsubsection{Plastics}
